# bang

./: .gitignore  BANG_presentation.ipynb  CMakeLists.txt  Dockerfile  Makefile  README.md  RELEASE_PROCESS.md  Untitled.ipynb  bang_presentation.ipynb  example_network.pbn  pyproject.toml  pyvenv.cfg
.github/: pull_request_template.md
.github/workflows/: clear-cache.yml  docs.yml  main.yml  pr_checks.yml
benchmarks/: benchmark_instance.py  run_benchmarks.py
docs/: conf.py  index.rst  pbn_funcs.rst  visualization.rst
docs/docs_compile/: simulation_funcs.rst
docs/doctrees/: environment.pickle  index.doctree  pbn_funcs.doctree  simulation_funcs.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  pbn_funcs.html  search.html  searchindex.js  simulation_funcs.html
docs/html/_sources/: pbn_funcs.rst.txt
docs/html/_static/: documentation_options.js
examples/: PBN_select_nodes.py  PBN_test.py  PBN_test2.py  as_bug.py  attractor_detect1.py  bang_problem.py  big_network.py  blocks.py  bn_7.ispl  example_network.pbn  fishy_pbn.py  monte_carlo.py  monte_carlo_detection.py  perturbation.py  reduce_truthtable_test.py  test2_no_perturbation.pbn  test_attractors.py  test_pbn.py  tricky_pbn.py
scripts/: release.sh
src/bang/: PBN.py  __init__.py  boolFunc.py  parseSBML.py  version.py
src/bang/core/: BDD.py  PBN.py  __init__.py  boolFunc.py  device_info.py  gpu_info.py  parseProbabilities.py  parseSBML.py  simulation.py
src/bang/core/attractors/blocks/: attractors_paralel.py  block_attractors.py  crossing.py  divide_and_conquer.py  graph.py  node_selection.py
src/bang/core/attractors/monolithic/: monolithic.py  segmentation.py
src/bang/core/attractors/monte_carlo/: count_states.py  merge_attractors.py  monte_carlo.py
src/bang/core/cpu/: simulation.py
src/bang/core/cuda/: attractor_search.py  attractors_gpu.py  bdd_traverse.py  crossing.py  simulation.py
src/bang/core/pbn/: array_management.py  pbn.py  simple_steps.py  truthtable_reduction.py
src/bang/core/pbn/utils/: integer_functions.py  state_printing.py
src/bang/core/simulation/: __init__.py  common.py
src/bang/core/simulation/cpu/: __init__.py  perturbation.py  state_management.py
src/bang/core/simulation/cpu/functions/: async_one_random.py  async_random_order.py  synchronous.py
src/bang/core/simulation/cuda/: __init__.py  perturbation.py  state_management.py
src/bang/core/simulation/cuda/kernels/: async_one_random.py  async_random_order.py  synchronous.py
src/bang/ffi/: GPU_stable.cu
src/bang/ffi/shared/: German.cc  German.h  ltqnorm.h
src/bang/graph/: __init__.py  example.assa  graph.py
src/bang/graph_representation/: graph.py
src/bang/parsing/: assa.py  bool_func.py  sbml.py
src/bang/visualization/: __init__.py  blocks.py  dependency.py  trajectory.py  utils.py
src/ffi/: GPU_stable.cc  GPU_stable.cu  GermanGPU.h  main.cpp
tests/: BDD_test.py  PBN_test.py  PBN_test2.py  PBN_test3.py  reduce_truthtable_test.py  setup_biodivine.py  test3.sbml  test_actions_perturbation.py  test_attractors.py  test_bools_to_state_conversion.py  test_cpu_save_history.py  test_cpu_simple_step.py  test_cpu_simple_step_large_n.py  test_scc_blocks.py  test_set_states.py  test_state_printing.py  test_update_node.py
