[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "bang-gpu"
readme = "README.md"
version = "0.1.0"

authors = [
    { name = "Mikołaj Czarnecki", email = "mc448206@students.mimuw.edu.pl" },
    { name = "Jan Jagodziński", email = "jan.jagodzinski@gmail.com" },
    { name = "Bartłomiej Parapura", email = "b.parapura@student.uw.edu.pl" },
    { name = "Paweł Zając", email = "pawel.andrzej.zajac@gmail.com" },
]

requires-python = ">=3.10"
dependencies = [
    "python-libsbml==5.20.4",
    "numba-cuda==0.4.0",
    "numba==0.61.0",
    "numpy==2.0.2",
    "graphviz==0.20.3",
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/zpp20/bang"
Repository = "https://github.com/zpp20/bang"
Changelog = "https://github.com/zpp20/bang/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright>=1.1,<2.0",
    "black>=23.0,<24.0",
    "isort>=5.12,<5.13",
    "pytest",
    "pytest-sphinx",
    "pytest-cov",
    "twine>=1.11.0",
    "build",
    "setuptools",
    "wheel",
    "Sphinx>=4.3.0,<7.1.0",
    "furo==2023.7.26",
    "myst-parser>=1.0,<2.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-autobuild==2021.3.14",
    "sphinx-autodoc-typehints==1.23.3",
    "packaging",
]

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests", "docs*", "scripts*"]
where = ["src"]

[tool.setuptools.package-data]
bang = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "bang.version.VERSION" }

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py39"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = ["Test*", "*Test"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"

[tool.cibuildwheel]
build = ["*cp312*", "*cp310*", "*cp38*"]
skip = ["*musllinux*", "*pypy*"]

archs = ["x86_64"]

manylinux-x86_64-image = "sameli/manylinux2014_x86_64_cuda_12.3"
manylinux-pypy_x86_64-image = "sameli/manylinux2014_x86_64_cuda_12.3"
